Closed
Bug 1738639
Opened 3 years ago
Closed 3 years ago
[wayland] Dragging tab breaks window shadows and causes file picker dialog to fail to appear
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
VERIFIED
FIXED
96 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | unaffected |
firefox95 | --- | unaffected |
firefox96 | --- | verified |
firefox97 | --- | verified |
People
(Reporter: ke5trel, Assigned: stransky)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
STR:
- Drag tab around tab strip on Ubuntu 21.04 or 21.10.
- Resize window.
Window has no border shadow, "About Firefox" dialog has no titlebar, file picker dialog fails to appear.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b35bcedf83d8810c48696c6856c8987bf64988ca&tochange=811ddc8525f3570b040de8e068ff9a4840adaf14
Regressed by Bug 1730533.
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
Will look at it, Thanks.
Assignee | ||
Comment 2•3 years ago
|
||
Bug 1730533 was reverted for 95 so it's not affected.
Assignee | ||
Comment 3•3 years ago
|
||
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/beeb3cce1fdc [Wayland] Don't disable draw update for D&D widgets, r=jhorak
Comment 5•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox96:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Updated•3 years ago
|
Flags: qe-verify+
Comment 6•3 years ago
|
||
Reproduced the issue on Firefox 95.0a1 (2021-11-01) under Ubuntu 20.04 by following the STR from Comment 0.
The issue is fixed on Firefox 96.0b4 and Firefox 97.0a1 (2021-12-13) on the same system.
Updated•3 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•