Bug 1738639 [Wayland] Don't disable draw update for D&D widgets, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D130092